# LEIC

./: README.md
2º Ano/1º Semestre/AED/AED_Proj1/: CMakeLists.txt
2º Ano/1º Semestre/AED/AED_Proj1/Tests/: avião.cpp  bagagens.cpp  carrinhoTransporte.cpp  main.cpp  serviço.cpp  voo.h
2º Ano/1º Semestre/AED/AED_Proj1/exportToHTML/: avião.cpp.html  bagagens.cpp.html  embarque.h.html  malas.cpp.html  serviço.cpp.html  serviço.h.html
2º Ano/1º Semestre/BD/BD_Proj/: criar.sql  gatilho0_adiciona.sql  gatilho0_remove.sql  gatilho1_adiciona.sql  gatilho2_adiciona.sql  int3.sql  int6.sql  int7.sql  int8.sql
2º Ano/2º Semestre/DA/DA_Proj1/: CMakeLists.txt
2º Ano/2º Semestre/DA/DA_Proj1/codigo/: README.md
2º Ano/2º Semestre/DA/DA_Proj1/documentacao/html/: _company_8h_source.html  _express_delivery_8h_source.html  _load_data_8h_source.html  _menu_8h_source.html  annotated.html  class_company-members.html  class_company.html  class_express_delivery-members.html  class_express_delivery.html  class_load_data-members.html  class_load_data.html  class_normal_delivery-members.html  class_normal_delivery.html  dir_413f4e031a85da0d68269c6fd2f76e1c.html  files.html  functions.html  functions_func.html  index.html  struct_company_1_1scenery1_results-members.html
2º Ano/2º Semestre/LCOM/LCOM_Proj/: .gitignore
3º Ano/1º Semestre/FSI/: LOGBOOK10.md  LOGBOOK11.md  LOGBOOK3.md  LOGBOOK5.md  README.md
3º Ano/1º Semestre/IPC/: README.md
3º Ano/1º Semestre/LBAW/LBAW_Proj/: .env_production  README.md  a7_openapi.yaml  docker_run.sh
3º Ano/1º Semestre/LBAW/Resumos T1/: 01a-introduction.docx  03-database-specification.docx  04-database-indexes.docx  06a-server-side-webdev.docx  Resumo geral.docx
Year_2/Semester_1/BD/BD_Proj/: README.md  gatilho0_verifica.sql  gatilho1_remove.sql  gatilho1_verifica.sql  gatilho2_remove.sql  gatilho2_verifica.sql  int1.sql  int10.sql  int2.sql  int4.sql  int5.sql  (+2 more)
Year_2/Semester_2/DA/DA_TP_Classes/: CMakeLists.txt
Year_2/Semester_2/DA/DA_TP_Classes/TP4/: qtsdps.cpp
Year_3/Semester_1/FSI/: LOGBOOK4.md  LOGBOOK6.md  LOGBOOK8.md
(+301 files in other folders)
